--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -23,17 +23,9 @@
     font-weight: 600;
 }
 
-.nav-menu {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    gap: 40px;
-    color: #626262;
-    font-size: 20px;
-    font-weight: 500;
-}
 
 .nav-select-menu {
+    display: flex !important;
     text-decoration: none;
     font-size: 24px;
     border: none;
@@ -48,31 +40,10 @@
     gap: 45px;
 }
 
-
-.nav-login-cart button:active {
-    background: #f3f3f3;
-}
-
-.nav-cart-count {
-    width: 20px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: -35px;
-    margin-left: -55px;
-    border-radius: 11px;
-    font-size: 14px;
-    background: red;
-    color: white;
-}
-
 .nav-menu-responsive {
     display: none;
 }
-.input-search-responsive {
-    display: flex;
-}
+
 .button-search-responsive {
     display: none;
 }
@@ -138,23 +109,19 @@
         display: none;
     }
 
-    .input-search-responsive {
-        display: none;
-    }
-
     .nav-select-menu {
         display: none;
-
     }
 
     .nav-menu-responsive {
         display: contents;
-        width: 100%;
+        width: 100%;    
     }
 
     .input-search-responsive {
         display: none;
     }
+
     .button-search-responsive {
         display: contents;
     }
