--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -18,8 +18,9 @@
 }
 .item_description{
     width: auto;
-    height: auto;
+    height: 100%;
     padding: 18px;
+    flex-grow: 1;
 }
 
 .item-price{
@@ -61,6 +62,7 @@
         flex: 1;
         display: flex;  
         flex-direction: column;
+        align-items: stretch;
         color: #FFFFFF;
         background-color: #212529;
     }
@@ -74,9 +76,9 @@
     }
     .item_description{
         padding: 12px;
-    }
-    .item_description p{
-       font-size: 13px;
+        font-size: 13px;
+        width: auto;
+        height: 100%;
     }
     .item_name{
         font-size: 16px;
