--- a/src/components/item_related/ItemRelated.css
+++ b/src/components/item_related/ItemRelated.css
@@ -3,6 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     background-color: #212529;
     color: #FFFFFF;
     cursor: pointer;
@@ -85,14 +86,19 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        align-items: stretch;
         background-color: #212529;
         color: #FFFFFF;
+    }
+    .relateditem:hover {
+        transform: none;
+        transition: none;
     }
 
     .relateditem img{
 
         max-width: 200px;
-        max-height: 150px;
+        max-height: 140px;
     }
  
     .relateditem_description {
