--- a/src/pages/css/Motor.css
+++ b/src/pages/css/Motor.css
@@ -6,11 +6,13 @@
 
 .motorcategory-products {
     max-width: 1240px;
-    display: grid;
-    grid-template-columns: auto auto auto;
+    display: flex;
+    flex-wrap: wrap;
     justify-items: center;
+    align-items: center;
     gap: 20px;
     margin: 40px auto;
+    animation: fadeIn 0.5s;
 }
 
 .motocategory-category-title {
@@ -33,7 +35,15 @@
     justify-content: center;
     padding-top: 30px;
 }
-
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+      }
+    
+      to {
+        opacity: 1;
+      }
+  }
 @media (max-width: 1024px) {
     .motocategory-banner {
         display: block;
@@ -46,10 +56,11 @@
     }
     .motorcategory-products{
         max-width: 430px;
-        display: grid;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: stretch;
         justify-content: center;
-        grid-template-columns: 1fr 1fr;
         margin: 30px auto;
-        gap: 15px;
+        gap: 10px;
     }
 }
