--- a/src/pages/css/About.css
+++ b/src/pages/css/About.css
@@ -1,10 +1,17 @@
-.about-title{
+.about {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.about-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.about-title hr{
+
+.about-title hr {
     width: 20%;
     border: none;
     border-radius: 10px;
@@ -12,14 +19,33 @@
     background: #FED444;
 }
 
-.about-banner{
+.about-banner {
     width: 100%;
     height: 469px;
 }
-.about-container{
+
+.about-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 50px;
+}
+
+.about-content {
+    display: flex;
+    width: 100%;
+}
+
+@media (max-width: 1024px) {
+    .about-banner {
+        display: block;
+        width: 100%;
+        height: 129px;
+    }
+
+    .about-content {
+        display: flex;
+        width: 100%;
+    }
 }
