--- a/src/pages/css/Blog.css
+++ b/src/pages/css/Blog.css
@@ -1,17 +1,17 @@
-.about {
+.blog {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.about-title {
+.blog-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.about-title hr {
+.blog-title hr {
     width: 20%;
     border: none;
     border-radius: 10px;
@@ -19,32 +19,35 @@
     background: #FED444;
 }
 
-.about-banner {
+.blog-banner {
     width: 100%;
     height: 469px;
 }
 
-.about-container {
+.blog-content {
+    max-width: 1240px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-items: center;
     align-items: center;
-    padding-top: 50px;
+    gap: 20px;
+    margin: 40px auto;
+    animation: fadeIn 0.5s;
 }
-
-.about-content {
+.blog-pagination{
     display: flex;
-    width: 100%;
+    justify-content: center;
+    padding-top: 30px;
 }
 
 @media (max-width: 1024px) {
-    .about-banner {
+    .blog-banner {
         display: block;
         width: 100%;
         height: 129px;
     }
 
-    .about-content {
+    .blog-content {
         display: flex;
         width: 100%;
     }
