--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -5,7 +5,7 @@
 }
 
 .search-input {
-  width: 400px;
+  width: 300px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px 0 0 4px;
@@ -20,5 +20,11 @@
 @media (max-width: 1024px) {
   .search-input {
     width: 260px;
+  }
+}
+
+@media (max-width: 1180px) {
+  .search-input{
+    width: 100%;
   }
 }
