--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -28,7 +28,9 @@
     gap: 10px;
 }
 .item_name{
-    white-space: wrap;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; /* Số lượng dòng bạn muốn hiển thị */
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 18px;
@@ -57,8 +59,7 @@
 }
 @media (max-width: 1024px) {
     .item{
-        width: 200px;
-        height: 100%;
+        width: 195px;
         flex: 1;
         display: flex;  
         flex-direction: column;
@@ -67,7 +68,7 @@
         background-color: #212529;
     }
     .item img{
-        width: 200px;
+        width: 195px;
         height: 140px;
     }
     .item:hover{
@@ -82,6 +83,8 @@
     }
     .item_name{
         font-size: 16px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
     }
     .item-price-bike{
         color: #FED251;
