fix blog at home page

--- a/src/pages/css/Blog.css
+++ b/src/pages/css/Blog.css
@@ -49,6 +49,8 @@
 
     .blog-content {
         display: flex;
+        justify-content: center;
         width: 100%;
+        gap: 10px;
     }
 }
