--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -38,6 +38,13 @@
     box-sizing: border-box;
     cursor: pointer;
 }
+.item_color{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1; /* Số lượng dòng bạn muốn hiển thị */
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .item_name:hover{
     color: #FED251;
     transition: 0.3s;
@@ -59,7 +66,44 @@
 }
 @media (max-width: 1024px) {
     .item{
+        width: 350px;
+        height: 100%;
+        flex: 1;
+        display: flex;  
+        flex-direction: column;
+        align-items: stretch;
+        color: #FFFFFF;
+        background-color: #212529;
+    }
+    .item img{
+        width: 350px;
+        height: 250px;
+    }
+    .item:hover{
+        transform: none;
+        transition: none;
+    }
+    .item_description{
+        padding: 12px;
+        font-size: 13px;
+        width: auto;
+        height: 150px;
+    }
+    .item_name{
+        font-size: 16px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+    }
+    .item-price-bike{
+        color: #FED251;
+        font-size: 18px;
+        font-weight: 600;
+    }
+}
+@media (max-width: 768px) {
+    .item{
         width: 195px;
+        height: 100%;
         flex: 1;
         display: flex;  
         flex-direction: column;
@@ -79,7 +123,7 @@
         padding: 12px;
         font-size: 13px;
         width: auto;
-        height: 100%;
+        height: 160px;
     }
     .item_name{
         font-size: 16px;
@@ -88,7 +132,7 @@
     }
     .item-price-bike{
         color: #FED251;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 600;
     }
 }
