--- a/src/components/blog_homepage/Blog_HomePage.css
+++ b/src/components/blog_homepage/Blog_HomePage.css
@@ -1,18 +1,18 @@
 .blog-hompage-container {
-    max-width: 100%;
+    max-width: 1240px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
-    margin-top: 50px;   
+    margin-top: 50px;
 }
 
 .blog-homepage-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 20px;
     width: 100%;
+    height: 60px;
 }
 
 .blog-homepage-title-btn {
@@ -39,103 +39,52 @@
 
 .blog-homepage-content {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     margin: 40px auto;
-    overflow: hidden;
-    gap: 20px;
     animation: fadeIn 0.5s;
-    position: relative;
-    padding: 0px 20px 0 20px;
-    transition: transform 0.5s ease-in-out;
+    position: relative;;
 }
-.blog-homepage-carosel{
+.blog-homepage-slider{
+    width: 100%;
+    max-width: 1240px;
     display: flex;
-    width: 1240px;
+    justify-content: center;
 }
 .blog-homepage-blog-item {
-    max-width: 430px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: stretch;
-    overflow: hidden;
-    margin: 0 auto;
-    gap: 15px;
-    transition: transform 0.5s ease-in-out;
+    align-items: center;
+    padding: 0 7px;
 }
-.blog-homepage-slide-in {
-    transform: translateX(0);
-}
-
-.blog-homepage-slide-out {
-    transform: translateX(-100%);
-}
-.blog-homepage-btn-left{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-.blog-homepage-btn-right{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-.blog-homepage-btn-left:first-child{
-    left: 0px;
-}
-.blog-homepage-btn-right:last-child{
-    right: -0px;
+.blog-homepage-slider .slick-slide {
+    max-width: 420px !important;
+    display: flex;
+    justify-content: center;
 }
 
-.btn-view-more:hover,
-.btn-view-more:focus,
-.btn-view-more:active {
-    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-.slide-enter {
-    transform: translateX(100%);
+.blog-homepage-slider .slick-slide > div {
+    width: 100%;
 }
 
-.slide-enter-active {
-    transform: translateX(0);
-}
 
-.slide-exit {
-    transform: translateX(0);
-}
 
-.slide-exit-active {
-    transform: translateX(-100%);
-}
-@media (max-width: 1235px) {
+@media (max-width: 1024px) {
     .blog-hompage-container {
         width: 100%;
+        overflow: hidden;
     }
 
     .blog-homepage-title {
         display: flex;
         justify-content: space-around;
     }
-
-    .blog-homepage-content {
-        grid-auto-columns: calc((100% / 2) - 12px);
-        overflow: hidden;
-    }
-    .blog-homepage-blog-item{
-        flex: 0 0 100%;
+    .blog-homepage-slider {
+        width: 100%;
+        max-width: 1000px;
     }
 
     .blog-homepage-title h1 {
         font-size: 22px;
     }
-
     .blog-homepage-title-btn {
         gap: 15px;
         width: 120px;
@@ -146,36 +95,32 @@
         font-weight: 500;
         text-decoration: none;
     }
-    .blog-homepage-btn-left:first-child{
-        left: 62px;
+    .blog-homepage-slider {
+        width: 100%;
+        max-width: 1024px;
     }
-    .blog-homepage-btn-right:last-child{
-        right: 62px;
+    .blog-homepage-slider .slick-slide {
+        max-width: 420px !important;
+        display: flex;
+        justify-content: center;
     }
+    
 
 }
-@media (max-width: 600px) {
+
+@media (max-width: 768px) {
     .blog-hompage-container {
         width: 100%;
-    }
+        overflow: hidden;
 
+    }
     .blog-homepage-title {
         display: flex;
         justify-content: space-around;
     }
-
-    .blog-homepage-content {
-        grid-auto-columns: 100%;
-        overflow: hidden;
-    }
-    .blog-homepage-blog-item{
-        flex: 0 0 100%;
-    }
-
     .blog-homepage-title h1 {
         font-size: 22px;
     }
-
     .blog-homepage-title-btn {
         gap: 15px;
         width: 120px;
@@ -186,11 +131,17 @@
         font-weight: 500;
         text-decoration: none;
     }
-    .blog-homepage-btn-left:first-child{
-        left: 16px;
+     .blog-homepage-slider {
+        width: 100%;
+        max-width: 768px;
     }
-    .blog-homepage-btn-right:last-child{
-        right: 16px;
+    .blog-homepage-slider .slick-slide {
+        max-width: 250px !important;
+        display: flex;
+        justify-content: center;
     }
-
+    
+    .blog-homepage-slider .slick-slide > div {
+        width: 100%;
+    }
 }
