--- a/src/components/item_related/ItemRelated.css
+++ b/src/components/item_related/ItemRelated.css
@@ -1,11 +1,11 @@
 .relateditem {
-    width: 380px;
+    width: 400px;
     height: 100%;
-    display: flex;
+    flex: 1;
+    display: flex;  
     flex-direction: column;
-    align-items: stretch;
-    background-color: #212529;
     color: #FFFFFF;
+    background-color: #212529;
     cursor: pointer;
 }
 
@@ -13,38 +13,33 @@
     text-decoration: none;
     color: inherit;
 }
-
-.relateditem-link img {
-    display: flex;
-    max-width: 380px;
-    max-height: 260px;
-    gap: 2px;
+.relateditem img{
+    width: 400px;
+    height: 300px;
 }
 
 .relateditem_description {
+    width: auto;
     height: 100%;
-    width: 100%;
-    padding: 18px 0px 18px 18px;
+    padding: 18px;
+    flex-grow: 1;
 }
 
-.relateditem p {
-    margin: 6px 0px;
-
-}
 
 .relateditem-price {
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 .relateditem_name {
-    white-space: wrap;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 18px;
+    font-weight: 600;
     box-sizing: border-box;
-    padding: 0px 10px 10px;
     cursor: pointer;
 }
 .relateditem_odo {
@@ -54,7 +49,7 @@
     font-size: 16px;
     font-weight: 500;
     box-sizing: border-box;
-    padding: 0px 10px 2px;
+   
 }
 
 .relateditem_name:hover {
@@ -64,23 +59,45 @@
 
 .relateditem-price-bike {
     color: #FED251;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 0px 10px 10px 10px;
-}
-
-.relateditem-img {
-    flex: 1;
-    display: flex;
+    font-size: 30px;
+    font-weight: 600;
 
 }
-
 .relateditem:hover {
     transform: scale(1.05);
     transition: 0.6s;
 }
 
 @media (max-width: 1024px) {
+    .relateditem {
+        width: 350px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        background-color: #212529;
+        color: #FFFFFF;
+    }
+    .relateditem:hover {
+        transform: none;
+        transition: none;
+    }
+
+    .relateditem img{
+        max-width: 350px;
+        max-height: 250px;
+    }
+
+    .relateditem_description {
+        height: 100px;
+    }
+    .relateditem-price-bike {
+        color: #FED251;
+        font-size: 16px;
+        font-weight: 600;
+    }
+}
+@media (max-width: 768px) {
     .relateditem {
         width: 200px;
         height: 100%;
@@ -101,22 +118,22 @@
         max-height: 140px;
     }
  
-    .relateditem_description {
-        padding: 0;
+    .item_description{
+        padding: 12px;
+        font-size: 13px;
+        width: auto;
+        height: 160px;
     }
 
     .relateditem_name {
-        white-space: wrap;
-        font-size: 14px;
-        font-weight: 700;
-        box-sizing: border-box;
-        padding: 2px 2px 10px 10px;
+        font-size: 16px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
     }
 
     .relateditem-price-bike {
         color: #FED251;
-        font-size: 15px;
-        font-weight: 700;
-        padding-left: 10px;
+        font-size: 16px;
+        font-weight: 600;
     }
 }
