--- a/src/components/product_display/ProductDisplay.css
+++ b/src/components/product_display/ProductDisplay.css
@@ -30,7 +30,6 @@
     display: flex;
     flex-direction: column;
     max-width: 700px;
-
 }
 
 .product-display-right h1 {
@@ -82,6 +81,25 @@
 
 
 @media (max-width: 1024px) {
+    .product-display {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0px 70px;
+        padding-top: 20px;
+        gap: 20px;
+    }
+
+    .product-display-img {
+        width: 450px;
+        height: 350px;
+    }
+    
+    .product-display-right {
+        justify-content: center;
+    }
+}
+@media (max-width: 768px) {
     .product-display {
         display: flex;
         flex-direction: column;
