--- a/src/pages/css/Blog.css
+++ b/src/pages/css/Blog.css
@@ -44,6 +44,21 @@
     .blog-banner {
         display: block;
         width: 100%;
+        height: 239px;
+    }
+
+    .blog-content {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .blog-banner {
+        display: block;
+        width: 100%;
         height: 129px;
     }
 
