--- a/src/pages/css/Shop.css
+++ b/src/pages/css/Shop.css
@@ -5,3 +5,10 @@
     align-items: center;
     width: 100%;
 }
+
+.shop-blog-home-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
