--- a/src/components/blog_display/BlogDisplay.css
+++ b/src/components/blog_display/BlogDisplay.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+    margin-top: 15px;
+    padding: 5px;
 }
 
 .blog-display-title {
@@ -67,11 +68,18 @@
     gap: 10px;
 
 }
+.blog-display-footer{
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    gap: 10px;
+}
 
 
 @media (max-width: 1024px) {
     .blog-display-container {
         margin-top: 10px;
+        padding: 0;
     }
 
     .blog-display-title h1 {
