--- a/src/pages/css/ErrorPage.css
+++ b/src/pages/css/ErrorPage.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: auto;
+    height: 100vh;
     gap: 10px;
 }
 
@@ -64,21 +64,54 @@
     border-color: #3EB8EA;
     color: #3EB8EA;
 }
-
 @media (max-width: 1024px) {
     .error {
        display: flex;
        flex-direction: column;
        justify-content: center;
-       width: 100%;
-       padding-top: 20px;
     }
 
     .error-icon img {
         width: 280px;
     }
 
-    .error-description {}
+    .error-description h1 {
+        font-size: 26px;
+    }
+
+    .description-ng-scope {
+       font-size: 14px;
+       max-width: 400px;
+    }
+
+    .btn-go-back-home {
+        display: flex;
+       justify-content: center;
+       width: 100%;
+    }
+    .size-btn {
+        width: 206px;
+        height: 50px;
+        font-size: 24px;
+        border-radius: 25px;
+        border-color: #3EB8EA;
+        color: #3EB8EA;
+    }
+}
+
+@media (max-width: 768px) {
+    .error {
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       width: 100%;
+    height: 100vh;
+
+    }
+
+    .error-icon img {
+        width: 280px;
+    }
 
     .error-description h1 {
         font-size: 26px;
