--- a/src/pages/css/Motor.css
+++ b/src/pages/css/Motor.css
@@ -1,8 +1,8 @@
-
 .motocategory-banner {
     display: block;
     width: 100%;
     height: 469px;
+    animation: fadeIn 2s;
 }
 
 .motorcategory-products {
@@ -13,7 +13,7 @@
     align-items: center;
     gap: 20px;
     margin: 40px auto;
-    animation: fadeIn 0.5s;
+    animation: fadeIn 1s;
 }
 
 .motocategory-category-title {
@@ -22,6 +22,9 @@
     justify-content: center;
     align-items: center;
 }
+.motocategory-category-title h1 {
+    animation: fadeInLeft 1s;
+}
 
 .motocategory-category-title hr {
     width: 20%;
@@ -29,6 +32,7 @@
     border-radius: 10px;
     height: 5px;
     background: #FED444;
+    animation: slideInRight 1s;
 }
 
 .motorcategory-pagination {
@@ -46,37 +50,68 @@
     height: 60vh;
     gap: 20px;
 }
-.motor-empty-img1{
+
+.motor-empty-img1 {
     width: 265px;
     height: 265px;
 }
-.motor-empty-description{
+
+.motor-empty-description {
     font-size: 24px;
     font-weight: 500;
 }
-.motor-empty-description-category{
+
+.motor-empty-description-category {
     font-size: 28px;
     font-weight: 600;
     color: #1677FF;
 }
+
 @keyframes fadeIn {
     from {
         opacity: 0;
-      }
-    
-      to {
+    }
+
+    to {
         opacity: 1;
-      }
+    }
+}
+
+@keyframes slideInRight {
+    from {
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
+        visibility: visible;
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+@keyframes fadeInLeft {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
   }
 
-  @media (max-width: 1024px) {
+@media (max-width: 1024px) {
 
     .motocategory-banner {
         display: block;
         width: 100%;
         height: 239px;
     }
-    .motorcategory-products{
+
+    .motorcategory-products {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
@@ -85,27 +120,32 @@
         margin: 30px auto;
         gap: 10px;
     }
+
     .motor-empty {
         width: 100%;
         height: 30vh;
     }
 }
+
 @media (max-width: 768px) {
-    .moto-category{
+    .moto-category {
         width: 100%;
         display: flex;
         flex-direction: column;
     }
+
     .motocategory-banner {
         display: block;
         width: 100%;
         height: 129px;
     }
-    .motocategory-category-title h1{
+
+    .motocategory-category-title h1 {
         padding-top: 15px;
         font-size: 24px;
     }
-    .motorcategory-products{
+
+    .motorcategory-products {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
@@ -114,19 +154,23 @@
         margin: 30px auto;
         gap: 10px;
     }
+
     .motor-empty {
         width: 100%;
         height: 30vh;
     }
-    .motor-empty-img1{
+
+    .motor-empty-img1 {
         width: 125px;
         height: 125px;
     }
-    .motor-empty-description{
+
+    .motor-empty-description {
         font-size: 16px;
         font-weight: 500;
     }
-    .motor-empty-description-category{
+
+    .motor-empty-description-category {
         font-size: 20px;
         font-weight: 600;
         color: #1677FF;
