--- a/src/components/floating_button/FloatingActionButton.css
+++ b/src/components/floating_button/FloatingActionButton.css
@@ -21,12 +21,21 @@
   bottom: 240px;
   border: 1px solid transparent; /* Viền trong suốt */
   background-color: white; /* Màu nền của biểu tượng nếu cần */
+} 
+.floating-icon-zalo img{
+  width: 50px;
+  border-radius: 50%;
 }
 
 .floating-icon-phone {
   bottom: 320px;
-  border: 3px solid transparent; /* Viền trong suốt */
+  border: 1px solid transparent; /* Viền trong suốt */
   background-color: white; /* Màu nền của biểu tượng nếu cần */
+}
+
+.floating-icon-phone img{
+  width: 50px;
+  border-radius: 50%;
 }
 
 /* Tạo viền xung quanh */
@@ -57,6 +66,7 @@
     gap: 30px;
     max-width: 768px;
     height: 50px;
+    padding-top: 4px;
     background-color: whitesmoke;
     animation: fadeIn 0.5s;
   }
