--- a/src/components/item_related/ItemRelated.css
+++ b/src/components/item_related/ItemRelated.css
@@ -64,8 +64,9 @@
 
 }
 .relateditem:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
     transition: 0.6s;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.6);
 }
 
 @media (max-width: 1024px) {
