--- a/src/components/loading/LoadingPage.css
+++ b/src/components/loading/LoadingPage.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 60vh;
 }
-.loader {
+/* .loader {
   width: 380px;
   height: 32px;
   border-radius: 20px;
@@ -22,7 +22,7 @@
   border-radius: inherit;
   background: currentColor;
   animation: l6 0.65s infinite;
-}
+} */
 @keyframes l6 {
     100% {inset:0}
 }
