--- a/src/components/blog/Blog.css
+++ b/src/components/blog/Blog.css
@@ -4,48 +4,47 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-items: space-between;
     color: #FFFFFF;
     background-color: #212529;
     cursor: pointer;
 }
 
 .blog-card-link {
-    display: flex;
     text-decoration: none;
     color: inherit;
 }
 
 .blog-card img {
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .blog-card-description {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 15px;
-    padding: 18px;
-    flex-grow: 1;
+    justify-content: space-between;
+    box-sizing: border-box;
+    max-width: 400px;
+    gap: 10px;
+    padding: 15px 8px;
 }
 
 .blog-card-title {
     -webkit-font-smoothing: antialiased;
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 500;
     text-transform: capitalize;
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
     color: #FFFFFF;
+    padding: 0 15px;
 }
 .blog-card:hover,
 .blog-card:focus,
 .blog-card:active {
-    transform: scale(1.01);
-    transition: 0.6s;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.6);
 }
 
@@ -89,6 +88,9 @@
     display: -webkit-box;
     justify-content: center;
     -webkit-line-clamp: 3;
+}
+.text-split2 {
+    -webkit-line-clamp: 1;
 }
 @media (max-width: 1024px) {
     .blog-card {
